--- a/best_practices.Rmd
+++ b/best_practices.Rmd
@@ -23,24 +23,25 @@ This is the first module in the [Building Blocks](topic_building_blocks.html) to
 
 We'll going to get up-to-speed on the basic tools in R. As part of that, we'll define and establish some good habits.
 
+***
 
 ### Slide Deck
 
 <script async class="speakerdeck-embed" data-id="39618f30472e4cac9659ce4f21a98aa6" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
 <div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-best-practices-1" title="Best Practices" target="_blank">Best Practices</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
 
+***
+
 ### Video Lecture
 
-<iframe 
-  src="https://www.youtube.com/embed/oHg5SJYRHA0" 
-  frameborder="0" 
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-  allowfullscreen
-  style="width:100%" 
-  height="100%" 
-  width="100%"></iframe>
+<div class="vid_container">
+  <iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video">
+  </iframe>
+</div>
 
-
+***
 
 ## Example
 
