--- a/best_practices.Rmd
+++ b/best_practices.Rmd
@@ -17,17 +17,23 @@ knitr::opts_chunk$set(
 
 This is the first module in the [Building Blocks](topic_building_blocks.html) topic; the relevant slack channel is [here](https://p8105fall2019.slack.com/messages/CMPF9U6LA).
 
-## {.tabset .tabset-pills}
+## Overview {.tabset .tabset-pills}
 
-### Learning objectives
+### Learning Objectives
 
 We'll going to get up-to-speed on the basic tools in R. As part of that, we'll define and establish some good habits.
 
-***
-
 ### Slide Deck
 
-<script async class="speakerdeck-embed" data-id="39618f30472e4cac9659ce4f21a98aa6" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+<div class="vid_container">
+  <iframe 
+    src="https://speakerdeck.com/player/39618f30472e4cac9659ce4f21a98aa6" 
+    allowfullscreen 
+    frameborder="0"
+    class="video">
+  </iframe>
+</div>
+
 <div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-best-practices-1" title="Best Practices" target="_blank">Best Practices</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
 
 ***
