--- a/best_practices.Rmd
+++ b/best_practices.Rmd
@@ -68,7 +68,7 @@ Create a new R script using File > New File > R Script. Write a short comment se
 
 ```{r}
 ##################################################################
-# Sept 5, 2019
+# Sept 5, 2020
 # Jeff Goldsmith
 #
 # Script for exploring R!
@@ -126,8 +126,7 @@ example_df = tibble(
   vec_factor = factor(c("male", "male", "female", "female"))
 )
 
-class(pull(example_df, vec_numeric))
-class(pull(example_df, vec_factor))
+example_df
 ```
 
 We're going to spend a lot of time talking about data frames over the course of the semester, starting in [Data Wrangling I](topic_data_wrangling_i.html). For now, just think of it as a rectangle that holds data you care about. 
@@ -154,7 +153,7 @@ ggplot(plot_df, aes(x = x, y = y)) + geom_point()
 We'll go through plotting in detail in [Visualization and EDA](topic_visualization_and_eda.html). 
 
 
-### Organizing code into readable scripts
+### Self-contained, readable scripts
 
 You should _always_ keep the complete code that was used for an analysis or project, no matter how brief. Your code should be self-contained -- it should include everything you did to produce what you wanted to produce. The two scripts below repeat content from above. 
 
@@ -165,22 +164,25 @@ First, data frames and variable classes.
 # Sept 5, 2019
 # Jeff Goldsmith
 #
-# Script exploring vector classes
+# Script exploring variable assignment
 ##################################################################
 
 library(tidyverse)
 
-## create data frame
-example_df = tibble(
-  vec_numeric = 5:8,
-  vec_char = c("My", "name", "is", "Jeff"),
-  vec_logical = c(TRUE, TRUE, TRUE, FALSE),
-  vec_factor = factor(c("male", "male", "female", "female"))
-)
+## create two variables
+x = (18/3 + 1*2) ^ (4 - 2) - 6.18273
+y = c(1, 3, 6, 9)
 
-## examine classes
-class(pull(example_df, vec_numeric))
-class(pull(example_df, vec_factor))
+## print and add the variables
+x
+x + y
+
+## overwrite x and examine / manipulate
+x = runif(20)
+x
+
+mean(x)
+var(x)
 ```
 
 Second, simple plots. 
@@ -232,7 +234,7 @@ A final word about scripts -- not every line of code you write will (or should) 
 
 Your projects will generally consist of several related files -- input data, scripts, results. It's important to keep these organized, so you can find everything you need quickly and easily. R Projects, through RStudio, give you an easy way to do this. 
 
-Create a directory and save the previous two scripts into that directory. Script names, like variable names, should be descriptive (e.g. `20190905_data_classes.R` and `20190905_simple_plots.R`). The directory name should be descriptive as well, and it should be in a reasonable place on your computer (e.g. `~/Documents/First_Project/`). Create an R Project using File > New Project > Existing Directory and specifying the directory you just created.
+Create a directory and save the previous two scripts into that directory. Script names, like variable names, should be descriptive (e.g. `20200905_var_assign.R` and `20200905_simple_plots.R`). The directory name should be descriptive as well, and it should be in a reasonable place on your computer (e.g. `~/Documents/first_project/`). Create an R Project using File > New Project > Existing Directory and specifying the directory you just created.
 
 For now, the best part about R Projects is that they force you to think about and organize the elements you need for your analysis or project. Double-clicking the new `.Rproj` file will launch the R Project; you'll see a Files tab in the usual Plots / Packages / Help / Viewer pane. Later, we'll find R Projects useful in other ways. 
 
