--- a/writing_with_data.Rmd
+++ b/writing_with_data.Rmd
@@ -10,7 +10,9 @@ You will typically (if not always) need to summarize your work in writing. This 
 
 This is the second module in the [Building blocks](topic_building_blocks.html) topic; the relevant slack channel is [here](https://p8105fall2019.slack.com/messages/CMPF9U6LA).
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, message=FALSE}
+library(tidyverse)
+
 inline <- function(x = "") paste0("`` `r ", x, "` ``")
 
 knitr::opts_chunk$set(
@@ -33,10 +35,12 @@ Before jumping in, one short note about the default RStudio treatment of R Markd
 
 ### Basic RMD
 
-Below is a first RMD file. To follow along, create a .Rmd file using File > New File > R Markdown, and replace the default text with what's below. 
+Below is a first RMD file. To follow along, create a .Rmd file using File > New File > R Markdown, and replace the default text with what's below; you can also download the template [here](resources/template.Rmd). Don't forget to keep this in a directory you can find again later!
 
 ```{r, echo = FALSE, comment = ""}
-cat(htmltools::includeText("resources/template.Rmd"))
+cat(
+  htmltools::includeText("resources/template.Rmd") %>% 
+    str_sub(start = 9))
 ```
 
 There are three major components to this file:
@@ -61,7 +65,7 @@ Beyond the name, you can customize the behavior of your code chunk via options d
 
 * `eval = FALSE`: code will be displayed but not executed; results are not included. 
 * `echo = FALSE`: code will be executed but not displayed; results are included. 
-* `include = FALSE`: code will be executed but not displayed; results are not included.
+* `include = FALSE`: code won't be executed or displayed.
 * `message = FALSE` and `warning = FALSE`: prevents messages and warnings from being displayed.
 * `results = hide` and `fig.show = hide`: prevents results and figures from being shown, respectively.
 * `collapse = TRUE`: output will be collapsed into a single block at shown at the end of the chunk.
@@ -71,7 +75,7 @@ Use these options to be judicious about what you include in your report. Remembe
 
 You can also cache the results of a code chunk, but we will largely avoid this. Caching can save time by saving the results of a code chunk instead of re-executing when the document is knit. However, you have to be careful when using this option since downstream code can depend on upstream changes. Controlling this behavior through the `dependson` option can help, but if you cache code you'll want to periodically clear you cache to ensure you're getting reproducible results. 
 
-Inserting brief code snippets inline is often helpful; I frequently use these to give the sample size or summary statistics in text. You can insert code inline using `r inline()`, often in conjunction with the `format()` function to clean up your output. 
+Inserting brief code snippets inline is sometimes helpful; I use these to give the sample size or summary statistics in text. You can insert code inline using `r inline()`, often in conjunction with the `format()` function to clean up your output. 
 
 **_Learning assessment:_** Write a named code chunk that creates a dataframe comprised of: a numeric variable containing a random sample of size 500 from a normal variable with mean 1; a logical vector indicating whether each sampled value is greater than zero; and a numeric vector containing the absolute value of each element. Then, produce a histogram of the absolute value variable just created. Add an inline summary giving the median value rounded to two decimal places. What happens if you set `eval = FALSE` to the code chunk? What about `echo = FALSE`? 
 
@@ -182,7 +186,7 @@ cat(htmltools::includeText("resources/rmd_basic_plots.Rmd"))
 
 Constructing useful documents that combine text and code is the subject of several online guides. See below for a sampling:
 
-* The R Markdown [cheatsheet](https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf) is a useful resource once you have the basics down
+* The R Markdown [cheatsheet](https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf) and this more [recent version](https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf) are useful resources once you have the basics down
 * R For Data Science devotes chapters to [R Markdown](http://r4ds.had.co.nz/r-markdown.html), [additional output formats](http://r4ds.had.co.nz/r-markdown-formats.html), and a useful [workflow](http://r4ds.had.co.nz/r-markdown-workflow.html).
 * The [Intro to R Markdown](http://rmarkdown.rstudio.com/articles_intro.html) from RStudio overlaps a lot with the previous bullet, but is also handy to review
 * This [chapter](https://ismayc.github.io/rbasics-book/4-rmarkdown.html) from [R Basics](https://ismayc.github.io/rbasics-book/) is a good intro to R Markdown
