--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -5,9 +5,9 @@ title: "Schedule"
 | Date          | Topic                 | Lecture                                                                      | Slides                                                                                                                                                                    | HW                                                         |                        Projects |
 |:------------- |:--------------------- |:-----------------------------------------------------------------------------|:--------------------------------------------------------------------------------:|:----------------------------------------------------------------------------------------------:|:----------------------------------------------------------:| -------------------------------:|
 | Tues Sept 8   | What is Data Science? | [What is Data Science?](what_is_ds_i.html)                                   | [<i class="fas fa-desktop fa-lg"></i>](slides/what_is_data_science_i.pdf)      | [<i class="far fa-file-code fa-lg"></i>](homework_0.html)  |                                 |   
-| Thur Sept 10   | Building blocks       | [Best Practices](best_practices.html)                                        | [<i class="fas fa-desktop fa-lg"></i>](slides/best_practices.pdf)      |                                                            |                                 |
-| Tues Sept 15  | Building blocks       | [Writing with Data](writing_with_data.html)                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/writing_with_data.pdf)       |                                                            |                                 |
-| Thur Sept 17  | Building blocks       | [Git](git.html)                                                              | [<i class="fas fa-desktop fa-lg"></i>](slides/git.pdf)                       | [<i class="far fa-file-code fa-lg"></i>](homework_1.html)  |                                 |   
+| Thur Sept 10   | Building Blocks       | [Best Practices](best_practices.html)                                        | [<i class="fas fa-desktop fa-lg"></i>](slides/best_practices.pdf)      |                                                            |                                 |
+| Tues Sept 15  | Building Blocks       | [Writing with Data](writing_with_data.html)                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/writing_with_data.pdf)       |                                                            |                                 |
+| Thur Sept 17  | Building Blocks       | [Git](git.html)                                                              | [<i class="fas fa-desktop fa-lg"></i>](slides/git.pdf)                       | [<i class="far fa-file-code fa-lg"></i>](homework_1.html)  |                                 |   
 | Tues Sept 22  | Data Wrangling I      | [Data Import](data_import.html)                                              | [<i class="fas fa-desktop fa-lg"></i>](slides/data_import.pdf)              |                                                             |                                 |
 | Thur Sept 24  | Data Wrangling I      | [Data Manipulation](data_manipulation.html)                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/data_manipulation.pdf)       |                                                             |                                 |
 | Tues Sept 29  | Data Wrangling I      | [Tidy data](tidy_data.html)                                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/tidy_data.pdf)               | [<i class="far fa-file-code fa-lg"></i>](homework_2.html)   |                                 |   
@@ -20,17 +20,17 @@ title: "Schedule"
 | Tues Oct 22   | Data Wrangling II     | [TBD](strings_and_factors.html)                              | [<i class="fas fa-desktop fa-lg"></i>](slides/strings_and_factors.pdf)          |                                                             | [Midterm](midterm_project.html) |
 | Thur Oct 27   | Interactivity         | [Making Websites](making_websites.html)                                      | [<i class="fas fa-desktop fa-lg"></i>](slides/making_websites.pdf)         |                                                             |                                 |
 | Tues Oct 29   | Interactivity         | [Plot.ly and Dashboards](plotly_and_dashboards.html)                         | [<i class="fas fa-desktop fa-lg"></i>](slides/plotly_and_dashboards.pdf)      | [<i class="far fa-file-code fa-lg"></i>](homework_4.html)   | [Final](final_project.html)     |
-| Tues Nov 3    | -Election day-        |                                                                              |                                                                                  |                                                                                                                                                                 |                                 |
+| Tues Nov 3    | -Election Day-        |                                                                              |                                                                                  |                                                                                                                                                                 |                                 |
 | Thur Nov 5    | Iteration             | [Writing Functions](writing_functions.html)                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/writing_functions.pdf)        |                                                                |                                 |
 | Tues Nov 10   | Iteration             | [Iteration and Listcols](iteration_and_listcols.html)                        | [<i class="fas fa-desktop fa-lg"></i>](slides/iteration_and_listcols.pdf)     |                                                             |                                 |
 | Thur Nov 12   | Iteration             | [Simulation](simulation.html)                                                | [<i class="fas fa-desktop fa-lg"></i>](slides/simulation.pdf)              |   |                                 |
 | Tues Nov 17   | Iteration             | [TBD](simulation.html)                                                | [<i class="fas fa-desktop fa-lg"></i>](slides/simulation.pdf)                  | [<i class="far fa-file-code fa-lg"></i>](homework_5.html)   |                                 |
-| Thur Nov 19    | Linear models         | [Linear Models](linear_models.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/linear_models.pdf)          |                                                             |                                 |
-| Tues Nov 24   | Linear models         | [Cross Validation](cross_validation.html)                                    | [<i class="fas fa-desktop fa-lg"></i>](slides/cross_validation.pdf)         |        |                                 |
+| Thur Nov 19    | Linear Models         | [Linear Models](linear_models.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/linear_models.pdf)          |                                                             |                                 |
+| Tues Nov 24   | Linear Models         | [Cross Validation](cross_validation.html)                                    | [<i class="fas fa-desktop fa-lg"></i>](slides/cross_validation.pdf)         |        |                                 |
 | Thur Nov 26   | -Thanksgiving-        |                                                                              |                                                                                  |                                                                                                                                                        |                                 |
-| Tues Dec 1   | Linear models         | [Bootstrapping](bootstrapping.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/bootstrapping.pdf)         |  |                                 |
-| Thur Dec 3   | Linear models         | [TBD](bootstrapping.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/bootstrapping.pdf)                   | [<i class="far fa-file-code fa-lg"></i>](homework_6.html)   |                                 |
-| Tues Dec 8   | Extra topics          | [TBD](with [Emily Robinson](https://twitter.com/robinson_es)) | [<i class="fas fa-desktop fa-lg"></i>](bit.ly/nyrconf19)                     |                                                             |                                 |
-| Thur Dec 10   | Extra topics          | [TBD](shiny.html)                                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/shiny.pdf)                 |                 
+| Tues Dec 1   | Linear Models         | [Bootstrapping](bootstrapping.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/bootstrapping.pdf)         |  |                                 |
+| Thur Dec 3   | Linear Models         | [TBD](bootstrapping.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/bootstrapping.pdf)                   | [<i class="far fa-file-code fa-lg"></i>](homework_6.html)   |                                 |
+| Tues Dec 8   | Extra Topics          | [TBD](with [Emily Robinson](https://twitter.com/robinson_es)) | [<i class="fas fa-desktop fa-lg"></i>](bit.ly/nyrconf19)                     |                                                             |                                 |
+| Thur Dec 10   | Extra Topics          | [TBD](shiny.html)                                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/shiny.pdf)                 |                 
 | Tues Dec 15   | Final Projects!       | [What is Data Science Revisited](what_is_ds_iii.html)                        | [<i class="fas fa-desktop fa-lg"></i>](slides/what_is_data_science_iii.pdf)      |                                                                                               |                                                             |                                 |
 
