--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -10,11 +10,11 @@ title: "Schedule"
 | Thur Sept 17  | Building Blocks       | [Git](git.html)                                                              | [<i class="fas fa-desktop fa-lg"></i>](slides/git.pdf)                       | [<i class="far fa-file-code fa-lg"></i>](homework_1.html)  |                                 |   
 | Tues Sept 22  | Data Wrangling I      | [Data Import](data_import.html)                                              | [<i class="fas fa-desktop fa-lg"></i>](slides/data_import.pdf)              |                                                             |                                 |
 | Thur Sept 24  | Data Wrangling I      | [Data Manipulation](data_manipulation.html)                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/data_manipulation.pdf)       |                                                             |                                 |
-| Tues Sept 29  | Data Wrangling I      | [Tidy data](tidy_data.html)                                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/tidy_data.pdf)               | [<i class="far fa-file-code fa-lg"></i>](homework_2.html)   |                                 |   
+| Tues Sept 29  | Data Wrangling I      | [Tidy Data](tidy_data.html)                                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/tidy_data.pdf)               | [<i class="far fa-file-code fa-lg"></i>](homework_2.html)   |                                 |   
 | Thur Oct 1  | Viz + EDA             | [Visualization 1](visualization_pt1.html)                                    | [<i class="fas fa-desktop fa-lg"></i>](slides/visualization.pdf)          |                                                             |                                 |
 | Tues Oct 6    | Viz + EDA             | [Visualization 2](visualization_pt2.html)                                    | [<i class="fas fa-desktop fa-lg"></i>](slides/visualization.pdf)          |                                                             |                                 |
 | Thur Oct 8    | Viz + EDA             | [EDA](exploratory_analysis.html)                                             | [<i class="fas fa-desktop fa-lg"></i>](slides/exploratory_analysis.pdf)     | [<i class="far fa-file-code fa-lg"></i>](homework_3.html)   |                                 |   
-| Tues Oct 13    | Case Study            | [Case study](what_is_ds_ii.html)                                             | [<i class="fas fa-desktop fa-lg"></i>](slides/what_is_data_science_ii.pdf)    |                                                             |                                 |
+| Tues Oct 13    | Case Study            | [Case Study](what_is_ds_ii.html)                                             | [<i class="fas fa-desktop fa-lg"></i>](slides/what_is_data_science_ii.pdf)    |                                                             |                                 |
 | Thur Oct 15   | Data Wrangling II     | [Reading Data from the Web](reading_data_from_the_web.html)                  | [<i class="fas fa-desktop fa-lg"></i>](slides/reading_data_from_the_web.pdf)     |                                                             |                                 |
 | Tues Oct 20   | Data Wrangling II     | [Strings and Factors](strings_and_factors.html)                              | [<i class="fas fa-desktop fa-lg"></i>](slides/strings_and_factors.pdf)      |                                                             |                                 |
 | Thur Oct 22   | Data Wrangling II     | [TBD](strings_and_factors.html)                              | [<i class="fas fa-desktop fa-lg"></i>](slides/strings_and_factors.pdf)          |                                                             | [Midterm](midterm_project.html) |
@@ -26,11 +26,11 @@ title: "Schedule"
 | Thur Nov 12   | Iteration             | [Simulation](simulation.html)                                                | [<i class="fas fa-desktop fa-lg"></i>](slides/simulation.pdf)              |   |                                 |
 | Tues Nov 17   | Iteration             | [TBD](simulation.html)                                                | [<i class="fas fa-desktop fa-lg"></i>](slides/simulation.pdf)                  | [<i class="far fa-file-code fa-lg"></i>](homework_5.html)   |                                 |
 | Thur Nov 19    | Linear Models         | [Linear Models](linear_models.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/linear_models.pdf)          |                                                             |                                 |
-| Tues Nov 24   | Linear Models         | [Cross Validation](cross_validation.html)                                    | [<i class="fas fa-desktop fa-lg"></i>](slides/cross_validation.pdf)         |        |                                 |
+| Tues Nov 24   | Linear Models         | [Cross-validation](cross_validation.html)                                    | [<i class="fas fa-desktop fa-lg"></i>](slides/cross_validation.pdf)         |        |                                 |
 | Thur Nov 26   | -Thanksgiving-        |                                                                              |                                                                                  |                                                                                                                                                        |                                 |
 | Tues Dec 1   | Linear Models         | [Bootstrapping](bootstrapping.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/bootstrapping.pdf)         |  |                                 |
 | Thur Dec 3   | Linear Models         | [TBD](bootstrapping.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/bootstrapping.pdf)                   | [<i class="far fa-file-code fa-lg"></i>](homework_6.html)   |                                 |
 | Tues Dec 8   | Extra Topics          | [TBD](with [Emily Robinson](https://twitter.com/robinson_es)) | [<i class="fas fa-desktop fa-lg"></i>](bit.ly/nyrconf19)                     |                                                             |                                 |
 | Thur Dec 10   | Extra Topics          | [TBD](shiny.html)                                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/shiny.pdf)                 |                 
-| Tues Dec 15   | Final Projects!       | [What is Data Science Revisited](what_is_ds_iii.html)                        | [<i class="fas fa-desktop fa-lg"></i>](slides/what_is_data_science_iii.pdf)      |                                                                                               |                                                             |                                 |
+| Tues Dec 15   | Final Projects!       | [What is Data Science? (Revisited)](what_is_ds_iii.html)                        | [<i class="fas fa-desktop fa-lg"></i>](slides/what_is_data_science_iii.pdf)      |                                                                                               |                                                             |                                 |
 
