--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -2,35 +2,22 @@
 title: "Schedule"
 ---
 
-| Date          | Topic                 | Lecture                                                                      | Slides                                                                                                                                                                    | HW                                                          |                        Projects |
-|:------------- |:--------------------- |:-----------------------------------------------------------------------------|:--------------------------------------------------------------------------------:|:----------------------------------------------------------------------------------------------:|:----------------------------------------------------------:| -------------------------------:|
-| Tues Sept 8   | What is Data Science? | [What is Data Science?](what_is_ds_i.html)                                   | [<i class="fas fa-desktop fa-lg"></i>](slides/what_is_data_science_i.pdf)      | [<i class="far fa-file-code fa-lg"></i>](homework_0.html)  |                                 |   
-| Thur Sept 10   | Building Blocks       | [Best Practices](best_practices.html)                                        | [<i class="fas fa-desktop fa-lg"></i>](slides/best_practices.pdf)      |                                                            |                                 |
-| Tues Sept 15  | Building Blocks       | [Writing with Data](writing_with_data.html)                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/writing_with_data.pdf)       |                                                            |                                 |
-| Thur Sept 17  | Building Blocks       | [Git](git.html)                                                              | [<i class="fas fa-desktop fa-lg"></i>](slides/git.pdf)                       | [<i class="far fa-file-code fa-lg"></i>](homework_1.html)  |                                 |   
-| Tues Sept 22  | Data Wrangling I      | [Data Import](data_import.html)                                              | [<i class="fas fa-desktop fa-lg"></i>](slides/data_import.pdf)              |                                                             |                                 |
-| Thur Sept 24  | Data Wrangling I      | [Data Manipulation](data_manipulation.html)                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/data_manipulation.pdf)       |                                                             |                                 |
-| Tues Sept 29  | Data Wrangling I      | [Tidy Data](tidy_data.html)                                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/tidy_data.pdf)               | [<i class="far fa-file-code fa-lg"></i>](homework_2.html)   |                                 |   
-| Thur Oct 1  | Viz + EDA             | [Visualization 1](visualization_pt1.html)                                    | [<i class="fas fa-desktop fa-lg"></i>](slides/visualization.pdf)          |                                                             |                                 |
-| Tues Oct 6    | Viz + EDA             | [Visualization 2](visualization_pt2.html)                                    | [<i class="fas fa-desktop fa-lg"></i>](slides/visualization.pdf)          |                                                             |                                 |
-| Thur Oct 8    | Viz + EDA             | [EDA](exploratory_analysis.html)                                             | [<i class="fas fa-desktop fa-lg"></i>](slides/exploratory_analysis.pdf)     | [<i class="far fa-file-code fa-lg"></i>](homework_3.html)   |                                 |   
-| Tues Oct 13    | Case Study            | [Case Study](what_is_ds_ii.html)                                             | [<i class="fas fa-desktop fa-lg"></i>](slides/what_is_data_science_ii.pdf)    |                                                             |                                 |
-| Thur Oct 15   | Data Wrangling II     | [Reading Data from the Web](reading_data_from_the_web.html)                  | [<i class="fas fa-desktop fa-lg"></i>](slides/reading_data_from_the_web.pdf)     |                                                             |                                 |
-| Tues Oct 20   | Data Wrangling II     | [Strings and Factors](strings_and_factors.html)                              | [<i class="fas fa-desktop fa-lg"></i>](slides/strings_and_factors.pdf)      |                                                             |                                 |
-| Thur Oct 22   | Data Wrangling II     | [TBD](strings_and_factors.html)                              | [<i class="fas fa-desktop fa-lg"></i>](slides/strings_and_factors.pdf)          |                                                             | [Midterm](midterm_project.html) |
-| Tues Oct 27   | Interactivity         | [Making Websites](making_websites.html)                                      | [<i class="fas fa-desktop fa-lg"></i>](slides/making_websites.pdf)         |                                                             |                                 |
-| Thur Oct 29   | Interactivity         | [Plot.ly and Dashboards](plotly_and_dashboards.html)                         | [<i class="fas fa-desktop fa-lg"></i>](slides/plotly_and_dashboards.pdf)      | [<i class="far fa-file-code fa-lg"></i>](homework_4.html)   | [Final](final_project.html)     |
-| Tues Nov 3    | -Election Day-        |                                                                              |                                                                                  |                                                                                                                                                                 |                                 |
-| Thur Nov 5    | Iteration             | [Writing Functions](writing_functions.html)                                  | [<i class="fas fa-desktop fa-lg"></i>](slides/writing_functions.pdf)        |                                                                |                                 |
-| Tues Nov 10   | Iteration             | [Iteration and Listcols](iteration_and_listcols.html)                        | [<i class="fas fa-desktop fa-lg"></i>](slides/iteration_and_listcols.pdf)     |                                                             |                                 |
-| Thur Nov 12   | Iteration             | [Simulation](simulation.html)                                                | [<i class="fas fa-desktop fa-lg"></i>](slides/simulation.pdf)              |   |                                 |
-| Tues Nov 17   | Iteration             | [TBD](simulation.html)                                                | [<i class="fas fa-desktop fa-lg"></i>](slides/simulation.pdf)                  | [<i class="far fa-file-code fa-lg"></i>](homework_5.html)   |                                 |
-| Thur Nov 19    | Linear Models         | [Linear Models](linear_models.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/linear_models.pdf)          |                                                             |                                 |
-| Tues Nov 24   | Linear Models         | [Cross-validation](cross_validation.html)                                    | [<i class="fas fa-desktop fa-lg"></i>](slides/cross_validation.pdf)         |        |                                 |
-| Thur Nov 26   | -Thanksgiving-        |                                                                              |                                                                                  |                                                                                                                                                        |                                 |
-| Tues Dec 1   | Linear Models         | [Bootstrapping](bootstrapping.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/bootstrapping.pdf)         |  |                                 |
-| Thur Dec 3   | Linear Models         | [TBD](bootstrapping.html)                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/bootstrapping.pdf)                   | [<i class="far fa-file-code fa-lg"></i>](homework_6.html)   |                                 |
-| Tues Dec 8   | Extra Topics          | [TBD](with [Emily Robinson](https://twitter.com/robinson_es)) | [<i class="fas fa-desktop fa-lg"></i>](bit.ly/nyrconf19)                     |                                                             |                                 |
-| Thur Dec 10   | Extra Topics          | [TBD](shiny.html)                                                          | [<i class="fas fa-desktop fa-lg"></i>](slides/shiny.pdf)                 |                 
-| Tues Dec 15   | Final Projects!       | [What is Data Science? (Revisited)](what_is_ds_iii.html)                        | [<i class="fas fa-desktop fa-lg"></i>](slides/what_is_data_science_iii.pdf)      |                                                                                               |                                                             |                                 |
+
+
+
+| Date | Module | Lectures | Live Session | Homework |
+|:--------------- |:------------------ |:-------------------------------|:---:|:----------------------------------:|
+| 9/8 - 9/10 | What is Data Science? | [What is Data Science?](what_is_ds_i.html) | 9/8 | [HW 0](homework_0.html) (due 9/11, 10pm) |
+| 9/10 - 9/19 | Building Blocks | [Best Practices](best_practices.html); [Writing with Data](writing_with_data.html); [Version Control](git.html) | 9/15 | [HW 1](homework_1.html) (due 9/19, 10pm) |
+| 9/21 - 9/30 | Data Wrangling I | [Data Import](data_import.html); [Data Manipulation](data_manipulation.html); [Tidy Data](tidy_data.html) | 9/24 | [HW 2](homework_2.html) (due 9/30, 10pm) |
+| 10/1 - 10/10 | Visualization & EDA | [Visualization 1](visualization_pt1.html); [Visualization 2](visualization_pt2.html); [EDA](exploratory_analysis.html) | 10/6 | [HW 3](homework_3.html) (due 10/10, 10pm) |
+| 10/12 - 10/14 | Case Study | [Case Study](what_is_ds_ii.html) | 10/13 |  |
+| 10/15 - 10/25 | Data Wrangling II | [Reading Data from the Web](reading_data_from_the_web.html); [Strings and Factors](strings_and_factors.html) | 10/20 | [Midterm](midterm_project.html) (due 10/25, 10pm) |
+| 10/26 - 11/4 | Interactivity | [Making Websites](making_websites.html); [Plot.ly and Dashboards](plotly_and_dashboards.html) | 10/29 | [HW 4](homework_4.html) (due 11/4, 10pm); [Final](final_project.html) (due TBD) |
+| 11/5 - 11/18 | Iteration | [Writing Functions](writing_functions.html); [Iteration and Listcols](iteration_and_listcols.html); [Simulations](simulation.html) | 11/10 | [HW 5](homework_5.html) (due 11/18, 10pm) |
+| 11/19 - 12/4 | Linear Models | [Linear Models](linear_models.html); [Cross-validation](cross_validation.html); [Bootstrapping](bootstrapping.html) | 11/24 | [HW 6](homework_6.html) (due 12/4, 10pm) |
+| 12/4 - 12/7 | Extra Topics | [TBD](); [TBD]() | TBD | [HW 7](homework_7.html) (due 12/11, 10pm) |
+
+
+
 
