--- a/index.Rmd
+++ b/index.Rmd
@@ -11,18 +11,18 @@ This course is being offered in the Fall of 2020 through the Biostatistics Depar
 
 ### Live Sessions
 
-Live (synchronous) sessions can be accessed through this [Zoom link] (https://columbiacuimc.zoom.us/j/97364164791) (passcode: 764753), and will be held on the following dates:
+Live (synchronous) sessions can be accessed through this [Zoom link](https://columbiacuimc.zoom.us/j/97364164791) (passcode: 764753), and will be held on the following dates:
 
-9/8 (What is Data Science?)
-9/15 (Building Blocks)
-9/24 (Data Wrangling I)
-10/6 (Visualization & EDA)
-10/13 (Case Study)
-10/20 (Data Wrangling II)
-10/29 (Interactivity)
-11/10 (Iteration)
-11/24 (Linear Models)
-TBD (Extra Topics)
+* 9/8 (What is Data Science?)
+* 9/15 (Building Blocks)
+* 9/24 (Data Wrangling I)
+* 10/6 (Visualization & EDA)
+* 10/13 (Case Study)
+* 10/20 (Data Wrangling II)
+* 10/29 (Interactivity)
+* 11/10 (Iteration)
+* 11/24 (Linear Models)
+* TBD (Extra Topics)
 
 ### People
 
