--- a/homework_and_projects.Rmd
+++ b/homework_and_projects.Rmd
@@ -13,14 +13,14 @@ In addition to grading for content, we reserve the right to deduct points for st
 
 |               | Available  | Due               | Assignment                                                | Solution                                                                   |
 |:------------- |:---------- |:----------------- | :--------------------------------------------------------:| :-------------------------------------------------------------------------:|
-| Homework 0    | Sept 3     | Sept 4 by 10:00am | [<i class="far fa-file-code fa-lg"></i>](homework_0.html) | [<i class="fas fa-check fa-lg"></i>](link)                                 |
-| Homework 1    | Sept 12    | Sept 20 by 4:00pm | [<i class="far fa-file-code fa-lg"></i>](homework_1.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw1_ajg2202.zip)    |
-| Homework 2    | Sept 24    | Oct 4 by 4:00pm   | [<i class="far fa-file-code fa-lg"></i>](homework_2.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw2_ajg2202.zip)    |
-| Homework 3    | Oct 3      | Oct 14 by 4:00pm  | [<i class="far fa-file-code fa-lg"></i>](homework_3.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw3_ajg2202.zip)    |
-| Homework 4    | Oct 22     | Nov 1 by 4:00pm   | [<i class="far fa-file-code fa-lg"></i>](homework_4.html) | [<i class="fas fa-check fa-lg"></i>](link)                                 |
-| Homework 5    | Oct 31     | Nov 11 by 4:00pm  | [<i class="far fa-file-code fa-lg"></i>](homework_5.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw5_ajg2202.zip)    |
-| Homework 6    | Nov 14     | Nov 25 by 4:00pm  | [<i class="far fa-file-code fa-lg"></i>](homework_6.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw6_ajg2202.zip)                                 |
-| Homework 7    | Nov 26     | Dec 6 by 4:00pm   | [<i class="far fa-file-code fa-lg"></i>](homework_7.html) | [<i class="fas fa-check fa-lg"></i>](link)                                 |
+| Homework 0    | Sept 8, 10am     | Sept 11, 10pm | [<i class="far fa-file-code fa-lg"></i>](homework_0.html) | [<i class="fas fa-check fa-lg"></i>](link)                                 |
+| Homework 1    | Sept 10, 10am    | Sept 19, 10pm | [<i class="far fa-file-code fa-lg"></i>](homework_1.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw1_ajg2202.zip)    |
+| Homework 2    | Sept 21, 10am    | Sept 30, 10pm   | [<i class="far fa-file-code fa-lg"></i>](homework_2.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw2_ajg2202.zip)    |
+| Homework 3    | Oct 1, 10am      | Oct 10, 10pm  | [<i class="far fa-file-code fa-lg"></i>](homework_3.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw3_ajg2202.zip)    |
+| Homework 4    | Oct 26, 10am     | Nov 4, 10pm   | [<i class="far fa-file-code fa-lg"></i>](homework_4.html) | [<i class="fas fa-check fa-lg"></i>](link)                                 |
+| Homework 5    | Nov 5, 10am     | Nov 18, 10pm  | [<i class="far fa-file-code fa-lg"></i>](homework_5.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw5_ajg2202.zip)    |
+| Homework 6    | Nov 19, 10am     | Dec 4, 10pm  | [<i class="far fa-file-code fa-lg"></i>](homework_6.html) | [<i class="fas fa-check fa-lg"></i>](./resources/p8105_hw6_ajg2202.zip)                                 |
+| Homework 7    | Dec 4, 10am     | Dec 11, 10pm   | [<i class="far fa-file-code fa-lg"></i>](homework_7.html) | [<i class="fas fa-check fa-lg"></i>](link)                                 |
 
 ### Midterm
 
@@ -28,7 +28,7 @@ The midterm project is not covered by the course policy on collaboration -- you 
 
 |                 | Available  | Due              | Assignment                                                     | Solution |
 |:--------------- |:---------- |:---------------- | :-------------------------------------------------------------:| :----------------------------------------------:|
-| Midterm Project | Oct 16     | Oct 25 at 4:00pm | [<i class="far fa-file-code fa-lg"></i>](midterm_project.html) | [<i class="fas fa-check fa-lg"></i>](link)      |
+| Midterm Project | Oct 15, 10am     | Oct 25, 10pm | [<i class="far fa-file-code fa-lg"></i>](midterm_project.html) | [<i class="fas fa-check fa-lg"></i>](link)      |
 
 ### Final
     
