--- a/what_is_ds_i.Rmd
+++ b/what_is_ds_i.Rmd
@@ -17,10 +17,37 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Some slides
+## Overview {.tabset .tabset-pills}
 
-<script async class="speakerdeck-embed" data-id="5d70b1a8ec6344729af32f4821a312c5" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
-<div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-what-is-data-science" title="What is data science?" target="_blank">What is Data Science?</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
+### Learning Objectives
+
+Define "data science" and understand its vital role in public health research.
+
+### Slide Deck
+
+<div class="vid_container">
+  <iframe 
+    src="https://speakerdeck.com/player/5d70b1a8ec6344729af32f4821a312c5" 
+    allowfullscreen 
+    frameborder="0"
+    class="video">
+  </iframe>
+</div>
+
+<div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-what-is-data-science" title="Writing with data" target="_blank">What is Data Science? (Part 1)</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
+
+***
+
+### Video Lecture
+
+<div class="vid_container">
+  <iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video">
+  </iframe>
+</div>
+
+***
 
 ## Example
 
