--- a/exploratory_analysis.Rmd
+++ b/exploratory_analysis.Rmd
@@ -8,9 +8,9 @@ output:
 
 Data sets can frequently be partitioned into meaningful groups based on the variables they contain. Making this grouping explicit allows the computation of numeric summaries within groups, which in turn facilitates quantitative comparisons. 
 
-This is the second module in the [Visualization and EDA](topic_visualization_and_eda.html) topic; the relevant slack channel is [here](https://p8105fall2019.slack.com/messages/CN01ALHR7).
+This is the second module in the [Visualization and EDA](topic_visualization_and_eda.html) topic.
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, message=FALSE,warning=FALSE}
 library(tidyverse)
 
 knitr::opts_chunk$set(
@@ -24,11 +24,37 @@ theme_set(theme_bw() + theme(legend.position = "bottom"))
 options(tibble.print_min = 6)
 ```
 
-## Some slides
+## Overview {.tabset .tabset-pills}
 
-<script async class="speakerdeck-embed" data-id="38db98aa225d41a0a0d7fec84ae7a259" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
-<div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/dsi-exploratory-analysis" title="Exploratory analysis" target="_blank">Exploratory Analysis</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
+### Learning Objectives
 
+Conduct exploratory analyses using `dplyr` verbs (group_by and summarize).
+
+### Slide Deck
+
+<div class="vid_container">
+  <iframe 
+    src="https://speakerdeck.com/player/38db98aa225d41a0a0d7fec84ae7a259" 
+    allowfullscreen 
+    frameborder="0"
+    class="video">
+  </iframe>
+</div>
+
+<div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/dsi-exploratory-analysis" title="Exploratory Analysis" target="_blank">Exploratory Analysis</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
+
+***
+
+### Video Lecture
+
+<div class="vid_container">
+  <iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video">
+  </iframe>
+</div>
+
+***
 
 ## Example
 
