--- a/reading_data_from_the_web.Rmd
+++ b/reading_data_from_the_web.Rmd
@@ -8,9 +8,9 @@ output:
   
 In [data import](data_import.html), we saw how to load data from a variety of formats; this is a fairly standard way to get data that have been gathered as part of a study. In a lot of cases, though, you're going to have to go out and get the data you want or need. That's what we're covering now.
 
-This is the first module in the [Data Wrangling II](topic_data_wrangling_ii.html) topic; the relevant slack channel is [here](https://p8105fall2019.slack.com/messages/CN8998SH5).
+This is the first module in the [Data Wrangling II](topic_data_wrangling_ii.html) topic.
 
-```{r, include = FALSE}
+```{r, include = FALSE,message=FALSE,warning=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   fig.width = 6,
@@ -23,11 +23,37 @@ library(tidyverse)
 theme_set(theme_bw() + theme(legend.position = "bottom"))
 ```
 
-## Some slides
+## Overview {.tabset .tabset-pills}
 
-<script async class="speakerdeck-embed" data-id="849dc71f1d784a4a9af780e5c4ba16a2" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+### Learning Objectives
+
+Gather data from online sources (i.e. “scrape”) using APIs, rvest, and httr.
+
+### Slide Deck
+
+<div class="vid_container">
+  <iframe 
+    src="https://speakerdeck.com/player/849dc71f1d784a4a9af780e5c4ba16a2" 
+    allowfullscreen 
+    frameborder="0"
+    class="video">
+  </iframe>
+</div>
+
 <div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-reading-data-from-the-web" title="Reading Data from the Web" target="_blank">Reading Data from the Web</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
 
+***
+
+### Video Lecture
+
+<div class="vid_container">
+  <iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video">
+  </iframe>
+</div>
+
+***
 
 ## Example
 
