--- a/tidy_data.Rmd
+++ b/tidy_data.Rmd
@@ -8,7 +8,7 @@ output:
 
 The overarching goal of data wrangling is to have a tidy, easy-to-use dataset. 
 
-This is the third module in the [Data Wrangling I](topic_data_wrangling_i.html) topic; the relevant slack channel is [here](https://p8105fall2019.slack.com/messages/CN898UWNB).
+This is the third module in the [Data Wrangling I](topic_data_wrangling_i.html) topic.
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
@@ -19,11 +19,37 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Some slides
+## Overview {.tabset .tabset-pills}
 
-<script async class="speakerdeck-embed" data-id="77a37cf3dcb945a9abd2e09439158d07" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+### Learning Objectives
+
+Understanding principles of "tidy" data, using relational databases, and merging datasets.
+
+### Slide Deck
+
+<div class="vid_container">
+  <iframe 
+    src="https://speakerdeck.com/player/77a37cf3dcb945a9abd2e09439158d07" 
+    allowfullscreen 
+    frameborder="0"
+    class="video">
+  </iframe>
+</div>
+
 <div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/dsi-tidy-data" title="Tidy Data" target="_blank">Tidy Data</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
 
+***
+
+### Video Lecture
+
+<div class="vid_container">
+  <iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video">
+  </iframe>
+</div>
+
+***
 
 ## Example
 
