--- a/writing_functions.Rmd
+++ b/writing_functions.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Writing functions"
+title: "Writing Functions"
 output:
   html_document: 
     toc: true
@@ -8,9 +8,9 @@ output:
 
 If you use the same code twice, you need a function -- this will improve code readability, facilitate troubleshooting, and reduce chances for mistakes. This content looks at the best approaches for writing R functions.
 
-This is the first module in the [Iteration](topic_iteration.html) topic; the relevant slack channel is [here](https://p8105fall2019.slack.com/messages/CN8KK99NJ).
+This is the first module in the [Iteration](topic_iteration.html) topic.
 
-```{r, include = FALSE}
+```{r, include = FALSE,message=FALSE,warning=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   fig.width = 6,
@@ -23,12 +23,37 @@ library(tidyverse)
 theme_set(theme_bw() + theme(legend.position = "bottom"))
 ```
 
+## Overview {.tabset .tabset-pills}
 
-## Some slides
+### Learning Objectives
 
-<script async class="speakerdeck-embed" data-id="3f91d97c70e641cea46366ac9d90c929" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+Create simple R functions to abstract common processes.
+
+### Slide Deck
+
+<div class="vid_container">
+  <iframe 
+    src="https://speakerdeck.com/player/3f91d97c70e641cea46366ac9d90c929" 
+    allowfullscreen 
+    frameborder="0"
+    class="video">
+  </iframe>
+</div>
+
 <div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jeffgoldsmith/p8105-writing-functions" title="Writing Functions" target="_blank">Writing Functions</a> </strong> from <strong><a href="https://speakerdeck.com/jeffgoldsmith" target="_blank">Jeff Goldsmith</a></strong>. </div><br>
 
+***
+
+### Video Lecture
+
+<div class="vid_container">
+  <iframe 
+    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    frameborder="0" allowfullscreen class="video">
+  </iframe>
+</div>
+
+***
 
 ## Example
 
